# language-museums

./: CODE_OF_CONDUCT.md  Museums_List.md  README.md  bibliography.md  pyproject.toml  splitter.py
museums-json/: alutiiq-museum.json  ateneo-de-lengua-y-cultura-guarani.json  baile-nan-gaidheal-highland-village.json  basque-museum-and-cultural-center.json  china-book-culture-exhibition-hall.json  culturlann-mcadam-o-fiaich.json  daniel-sanders-haus.json  dante-alighieri-society.json  deutsches-buch-und-schriftmuseum.json  dr-johnsons-house.json  erlebniswelt-deutsche-sprache.json  esperanto-museum.json  great-blasket-centre.json  grimmwelt.json  gutenberg-museum.json  house-museum-of-neofit-rilski.json  hungarian-language-museum.json  ivar-aasen-centre.json  jaars-museum-of-the-alphabet.json  jan-kollar-museum.json  klingspor-museum-offenbach.json  konrad-duden-museum.json  language-movement-museum.json  linguistic-educational-museum.json  ljudevit-gaj-museum.json  ludovit-stur-museum.json  mundolingua.json  musee-champollion-les-ecritures-du-monde.json  musee-national-de-lesperanto-de-gray.json  museo-de-esperanto-de-subirats.json  museo-de-la-lengua.json  museo-de-la-tierra-guarani.json  museo-del-dialetto-dellalto-lario-occidentale.json  museo-del-libro-y-de-la-lengua.json  museu-da-lingua-portuguesa.json  museum-der-sprachen-der-welt.json  museum-fur-kommunikation.json  museum-ladin-ciastel-de-tor.json  museum-of-the-basque-language.json  museum-of-the-lithuanian-language.json  (+18 more)
splitter/: 814-20180314-Language-museums-OG.txt  splitter.py
